@@ -1,16 +1,13 @@
-Sun Jul 10 03:19:45 2016 --> [BEGIN] New log file started. To review old log files, see ./archive/
-Sun Jul 10 03:20:09 2016 --> [ LOG ] Lobsang.begin() called.
-Sun Jul 10 03:20:10 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
-Sun Jul 10 03:20:12 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
-Sun Jul 10 03:20:14 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
-Sun Jul 10 03:20:16 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
-Sun Jul 10 03:20:18 2016 --> [ERROR] Duino is not responding to 'OK?' query. Cannot continue running program.
-Sun Jul 10 05:49:00 2016 --> [ LOG ] Lobsang.begin() called.
-Sun Jul 10 05:49:01 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
-Sun Jul 10 05:49:02 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
-Sun Jul 10 06:17:27 2016 --> [ LOG ] Lobsang.begin() called.
-Sun Jul 10 06:17:29 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
-Sun Jul 10 06:17:30 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
-Sun Jul 10 06:18:41 2016 --> [ LOG ] Lobsang.begin() called.
-Sun Jul 10 06:18:42 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
-Sun Jul 10 06:18:43 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Mon Jul 11 23:16:34 2016 --> [BEGIN] New log file started. To review old log files, see ./archive/
+Mon Jul 11 23:17:04 2016 --> [ LOG ] Lobsang.begin() called.
+Mon Jul 11 23:17:05 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Tue Jul 12 05:38:10 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Tue Jul 12 05:38:12 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Tue Jul 12 05:38:14 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Tue Jul 12 05:38:16 2016 --> [ERROR] Duino is not responding to 'OK?' query. Cannot continue running program.
+Tue Jul 12 06:30:11 2016 --> [ LOG ] Lobsang.begin() called.
+Tue Jul 12 06:30:12 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Tue Jul 12 06:30:13 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Tue Jul 12 06:30:13 2016 --> [ LOG ] Lobsang.begin() called.
+Tue Jul 12 06:30:14 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
+Tue Jul 12 06:30:15 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
